syntax="proto3";

package models;

service UserRPC {
    rpc GetUserById(User) returns (User) {}
}

message User {
    uint64  id       = 1;
    string  name     = 2;

    string  password = 6;
    string  token    = 7;

    int64   created_utc  = 14;
    int64   modified_utc = 15;
}
